--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
         "nwidart/laravel-modules": "^12.0",
+        "spatie/laravel-html": "^3.12",
         "wikimedia/composer-merge-plugin": "^2.1"
     },
     "require-dev": {
