--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "midtrans/midtrans-php": "^2.6",
         "nwidart/laravel-modules": "^12.0",
         "spatie/laravel-html": "^3.12",
+        "spatie/laravel-medialibrary": "^11.13",
         "wikimedia/composer-merge-plugin": "^2.1"
     },
     "require-dev": {
